Adjust menu styles to prevent shifting content

--- a/src/components/docs-menu/docs-menu.scss
+++ b/src/components/docs-menu/docs-menu.scss
@@ -1,7 +1,7 @@
 docs-menu {
   grid-area: menu;
   min-height: 100vh;
-  min-width: 200px;
+  min-width: 220px;
 }
 
 .section-switch {
@@ -19,7 +19,7 @@ docs-menu {
   font-weight: 600;
   height: calc(100% - var(--header-height));
   overflow-y: auto;
-  padding: 2rem;
+  padding: 2rem 1rem 2rem 2rem;
 }
 
 .menu li {
@@ -134,7 +134,7 @@ docs-menu {
   }
 
   .menu__submenu > li {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.35em;
   }
 
   .section-switch {
